<resources>
    <string name="app_name">DiagnosticTool</string>
    <string name="let_s_start_diagnosis">Let\'s Start Diagnosis...</string>
    <string name="sounds">Sounds</string>
    <string name="textview">TextView</string>
    <string name="display">Display</string>
    <string name="camera">Camera</string>
    <string name="Diagnosys">Diagnosis</string>
    <string name="Diagnosis">Diagnosis</string>
    <string name="Sound">Sound</string>
    <string name="Speaker">Speaker On</string>
    <string name="Muet">Muet</string>
    <string name="Mute">Muet</string>
    <string name="Viberate">Viberate</string>
    <string name="Photo">Click Photo</string>
    <string name="Video" />
    <string name="video">Video</string>
    <string name="Vibrate">Vibrate</string>
    <string name="Vibration">Vibration</string>
    <string name="Battery">Battery</string>
    <string name="emptybatter">Battery Low</string>
    <string name="BatteryLow">Battery Low</string>
    <string name="savebatter">Power Saver</string>
    <string name="SaveBattery">Power Same</string>
    <string name="Save_Battery">Power Save</string>
    <string name="charging">Charging</string>
    <string name="sound">Sound</string>
    <string name="connection">Connection</string>
    <string name="sensor">Sensor</string>
    <string name="battery">Battery</string>
    <string name="volume_up">Volume Up</string>
    <string name="volume_down">Volume Down</string>
    <string name="photo">Photo</string>
    <string name="accelerometer">Acceloerometer Sensors</string>
    <string name="acce">Accelerometer</string>
    <string name="proximity">"Proximity "</string>
    <string name="motion">Motion</string>
    <string name="wifi">Wifi</string>
    <string name="otg">OTG</string>
    <string name="bt">BlueTooth</string>
    <string name="nfc">NFC</string>
    <string name="tab1">Monday</string>
    <string name="describe">Describe</string>
    <string name="health">Health</string>
    <string name="percentage">Percentage</string>
    <string name="Charge">Charging</string>
    <string name="todo">TODO</string>
</resources>