<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".home">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Battery"
            android:textAlignment="center"
            android:textSize="36sp" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:contentDescription="@string/describe"
            android:src="@drawable/battery"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="250dp">

            <ProgressBar
                android:indeterminate="false"
                android:indeterminateBehavior="cycle"
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="208dp"
                android:layout_height="199dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/batterylevel"
                android:layout_width="83dp"
                android:layout_height="57dp"
                android:textAlignment="center"
                android:textSize="36sp"
                app:layout_constraintBottom_toBottomOf="@+id/progressBar"
                app:layout_constraintEnd_toEndOf="@+id/progressBar"
                app:layout_constraintStart_toStartOf="@+id/progressBar"
                app:layout_constraintTop_toTopOf="@+id/progressBar" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/health"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/textViewh"
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/health"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/batteryhealth"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text=""
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/save_battery"
            android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/textViews"
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/percentage"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/status"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text=""
                android:textSize="18sp" />
        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:ignore="ContentDescription"
                    android:src="@drawable/battery_charging"/>

                <TextView
                    android:id="@+id/textViewlk"
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/Charge"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/charging"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text=""
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>
</ScrollView>