<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".home">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/soundtextView"
            android:textAlignment="center"
            android:textSize="50sp"
            android:textColor="@color/cardview_dark_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Sound" />

        <GridLayout
            android:columnCount="2"
            android:rowCount="3"
            android:alignmentMode="alignMargins"
            android:columnOrderPreserved="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/sound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="12dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp">

                <LinearLayout android:layout_height="wrap_content"
                    android:layout_width="wrap_content">

                    <ImageView
                        android:id="@+id/sound1_img"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:contentDescription="@string/Speaker"
                        android:src="@drawable/sound" />

                    <TextView
                        android:id="@+id/display_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/Speaker"
                        android:textColor="#6f6f6f"
                        android:textSize="18sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/muet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="12dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp">

                <LinearLayout android:layout_height="wrap_content"
                    android:layout_width="wrap_content">

                    <ImageView
                        android:id="@+id/muet_img"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:contentDescription="@string/Mute"
                        android:src="@drawable/muet" />

                    <TextView
                        android:id="@+id/sound_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/Muet"
                        android:textColor="#6f6f6f"
                        android:textSize="18sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/sound1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="12dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp">

                <LinearLayout android:layout_height="wrap_content"
                    android:layout_width="wrap_content">

                    <ImageView
                        android:id="@+id/Vibrate_img"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:contentDescription="@string/Vibration"
                        android:src="@drawable/vibrate" />

                    <TextView
                        android:id="@+id/viberate_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/Vibrate"
                        android:textColor="#6f6f6f"
                        android:textSize="18sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/vol_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="12dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp">

                <LinearLayout android:layout_height="wrap_content"
                    android:layout_width="wrap_content">

                    <ImageView
                        android:id="@+id/vol_incerese_img"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/vol_inc" />

                    <TextView
                        android:id="@+id/vol_incerese_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/volume_up"
                        android:textColor="#6f6f6f"
                        android:textSize="18sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/vol_down"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="12dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp">

                <LinearLayout android:layout_height="wrap_content"
                    android:layout_width="wrap_content">

                    <ImageView
                        android:id="@+id/Vol_decrese_img"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/vol_dec" />

                    <TextView
                        android:id="@+id/Vol_decrese_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/volume_down"
                        android:textColor="#6f6f6f"
                        android:textSize="18sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </GridLayout>

    </LinearLayout>



</ScrollView>