<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".home">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/sensortextView"
            android:textAlignment="center"
            android:textSize="50sp"
            android:textColor="@color/cardview_dark_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/connection" />

        <GridLayout
            android:columnCount="2"
            android:rowCount="3"
            android:alignmentMode="alignMargins"
            android:columnOrderPreserved="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/wifi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="12dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp">

                <LinearLayout android:layout_height="wrap_content"
                    android:layout_width="wrap_content">

                    <ImageView
                        android:id="@+id/wifi_img"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:contentDescription="@string/motion"
                        android:src="@drawable/wi" />

                    <TextView
                        android:id="@+id/wifi_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/wifi"
                        android:textColor="#6f6f6f"
                        android:textSize="18sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/otg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="12dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp">

                <LinearLayout android:layout_height="wrap_content"
                    android:layout_width="wrap_content">

                    <ImageView
                        android:id="@+id/otg_img"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:contentDescription="@string/otg"
                        android:src="@drawable/otg" />

                    <TextView
                        android:id="@+id/otg_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/otg"
                        android:textColor="#6f6f6f"
                        android:textSize="18sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="12dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp">

            <LinearLayout android:layout_height="wrap_content"
                    android:layout_width="wrap_content">

                    <ImageView
                        android:id="@+id/bt_img"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:contentDescription="@string/bt"
                        android:src="@drawable/bt" />

                    <TextView
                        android:id="@+id/bt_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/bt"
                        android:textColor="#6f6f6f"
                        android:textSize="18sp" />
            </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/nfc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="12dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp">

                <LinearLayout android:layout_height="wrap_content"
                    android:layout_width="wrap_content">

                    <ImageView
                        android:id="@+id/nfc_img"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:contentDescription="@string/nfc"
                        android:src="@drawable/nfc" />

                    <TextView
                        android:id="@+id/nfc_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/nfc"
                        android:textColor="#6f6f6f"
                        android:textSize="18sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </GridLayout>

    </LinearLayout>

</ScrollView>